--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.3.1"
