--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-loader": "^0.28.9",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
+    "json-loader": "^0.5.7",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
@@ -26,6 +27,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "echarts": "^4.2.0-rc.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
     "react": "^16.2.0",
